--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,7 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<button onclick={{action "setFive"}}>
+  Five
+</button>
 
-{{outlet}}
+<button onclick={{action "setTen"}}>
+  Ten
+</button>
